--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     /* Variáveis CSS para fácil customização via JS ou manualmente */
     --background-color: #FFFBE0; /* Amarelo palha muito claro */
     --accent-color: #FFC72C; /* Amarelo dourado vibrante */
-    --primary-color: #faf754; /* Marrom escuro/Dourado escuro para texto */
+    --primary-color: #dfa946; /* Marrom escuro/Dourado escuro para texto */
     --secondary-color: #f8c14a; /* Marrom claro/Bronze para texto secundário */
     --header-bg: #ffffff; /* Fundo branco para o cabeçalho (mantendo a clareza) */
     --border-radius: 10px;
