--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --background-color: #FFFBE0; /* Amarelo palha muito claro */
     --accent-color: #FFC72C; /* Amarelo dourado vibrante */
     --primary-color: #f1c943; /* Marrom escuro/Dourado escuro para texto */
-    --secondary-color: #eeb438; /* Marrom claro/Bronze para texto secundário */
+    --secondary-color: #8b711a; /* Marrom claro/Bronze para texto secundário */
     --header-bg: #ffffff; /* Fundo branco para o cabeçalho (mantendo a clareza) */
     --border-radius: 10px;
     --shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
