--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 5.0m;
   margin: 0;
   color: var(--secondary-color);
   font-weight: 700;
@@ -74,7 +74,7 @@ h1 {
   transition: var(--transition);
   font-size: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-  background-color: #eee23e; /* Fundo branco para os ícones */
+  background-color: #f7f2b7; /* Fundo branco para os ícones */
 }
 
 .social-icon:hover {
